<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MenuActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:src="@drawable/grupo2"
        android:layout_marginTop="40dp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/tvOurMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/our_menu"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="50dp">

        <Button
            android:id="@+id/btnAntojitos"
            android:text="@string/antojitos"
            android:textColor="@color/white"
            android:background="@drawable/first_gradient"
            android:paddingHorizontal="@dimen/menu_button_paddings"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menu_button_text"
            android:textAllCaps="true"
            android:paddingVertical="@dimen/menu_button_paddings"/>

        <Button
            android:id="@+id/btnEspecialidades"
            android:text="@string/especialidades"
            android:textColor="@color/white"
            android:background="@drawable/first_gradient"
            android:paddingHorizontal="@dimen/menu_button_paddings"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menu_button_text"
            android:textAllCaps="true"
            android:paddingVertical="@dimen/menu_button_paddings"/>
        <Button
            android:id="@+id/btnCombinations"
            android:text="@string/combinations"
            android:textColor="@color/white"
            android:background="@drawable/first_gradient"
            android:paddingHorizontal="@dimen/menu_button_paddings"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menu_button_text"
            android:textAllCaps="true"
            android:paddingVertical="@dimen/menu_button_paddings"/>
        <Button
            android:id="@+id/btnTortas"
            android:text="@string/tortas"
            android:textColor="@color/white"
            android:background="@drawable/first_gradient"
            android:paddingHorizontal="@dimen/menu_button_paddings"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menu_button_text"
            android:textAllCaps="true"
            android:paddingVertical="@dimen/menu_button_paddings"/>
        <Button
            android:id="@+id/btnSopas"
            android:text="@string/sopas"
            android:textColor="@color/white"
            android:background="@drawable/first_gradient"
            android:paddingHorizontal="@dimen/menu_button_paddings"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menu_button_text"
            android:textAllCaps="true"
            android:paddingVertical="@dimen/menu_button_paddings"/>
        <Button
            android:id="@+id/btnDrinks"
            android:text="@string/drinks"
            android:textColor="@color/white"
            android:background="@drawable/first_gradient"
            android:paddingHorizontal="@dimen/menu_button_paddings"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menu_button_text"
            android:textAllCaps="true"
            android:paddingVertical="@dimen/menu_button_paddings"/>

    </GridLayout>
</LinearLayout>